[package]
name = "reports"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28.1"}
egui = { version = "0.28.1"}
image = { version = "0.25.2", default-features = false }
serde = { version = "1.0.210", features = ["derive"], default-features = false }
serde_json = { version = "1.0.128"}

[profile.release]
opt-level = "z"
lto = true
strip = true